fix: align content on the landing page

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -1726,6 +1726,7 @@ header {
     width: 61vw;
     height: 60.3vw;
     object-position: 39%;
+    margin: 0;
   }
   .try-now__h2 {
     text-align: center;
@@ -1733,7 +1734,7 @@ header {
   .try-now__h3 {
     font-size: 26px;
     text-align: center;
-    margin-top: 7px;
+    margin-top: 13px;
     max-width: 600px;
   }
   .try-now__h4 {
@@ -1844,7 +1845,7 @@ header {
   }
   .pay-and-feed {
     width: calc( 100% - 40px );
-    margin-left: 20px;
+    margin-left: 0;
   }
   .pay-and-feed-wrapper {
     width: 100%;
@@ -2052,6 +2053,9 @@ header {
   }
   .footer__donate {
     height: 230px;
+  }
+  .footer__h2_margin {
+    margin-bottom: -6px;
   }
 }
 @media (max-width: 639px) {
